# quickjs-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  justfile  release.toml  shell.nix
.circleci/: config.yml
.github/workflows/: main.yml
examples/: eval.rs  serde.rs
examples/eval/: Cargo.toml
libquickjs-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml  static-functions.c  wrapper.h
libquickjs-sys/embed/: bindings.rs  static-functions.c
libquickjs-sys/embed/patches/: js-tobigint64-overflow.patch  stack-overflow-signed.patch
libquickjs-sys/embed/quickjs/: LICENSE.txt  quickjs.c
libquickjs-sys/src/: bindings.rs  lib.rs  static-functions.c  static-functions.rs  wrapper.h
quickjs-sys/: Cargo.toml  LICENSE.txt  README.md  build.rs
quickjs-sys/embed/: bindings.rs
quickjs-sys/src/: lib.rs
serde/: Cargo.toml
serde/src/: context.rs  errors.rs  lib.rs  ser.rs
serde/src/ser/: map.rs  mod.rs  seq.rs  variant.rs
serde/tests/: ser.rs
src/: bigint.rs  bindings.rs  callback.rs  console.rs  lib.rs  module_loader.rs  modules.rs  owned_value_ref.rs  tests.rs  timers.rs  utils.rs  value.rs
src/bindings/: compile.rs  convert.rs  droppable_value.rs  mod.rs  mod_old.rs  value.rs
src/utils/: compile.rs  mod.rs
src/value/: bigint.rs  marshal.rs  mod.rs  serde.rs
