[package]
edition = "2018"
name = "quick-js"
description = "QuickJS Javascript engine wrapper"
version = "0.2.3"
readme = "README.md"
documentation = "https://docs.rs/quick-js"
repository = "https://github.com/theduke/quickjs-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>"]
keywords = ["quickjs", "javascript", "js", "engine", "interpreter"]

[dependencies]
libquickjs-sys = { version = "0.3.0", path = "./libquickjs-sys" }
chrono = { version = "0.4.7", optional = true }
num-bigint = { package = "num-bigint", version = "0.2.2", optional = true }
num-traits = { package = "num-traits", version = "0.2.0", optional = true }

[workspace]
members = [
    "libquickjs-sys",
]

[features]
patched = ["libquickjs-sys/patched"]
bignum = ["libquickjs-sys/bignum"]
num = ["bignum", "num-bigint", "num-traits"]

[package.metadata.docs.rs]
features = [ "chrono" ]
