[package]
edition = "2018"
name = "quick-js"
description = "QuickJS Javascript engine wrapper"
version = "0.4.2-alpha.0"
readme = "README.md"
documentation = "https://docs.rs/quick-js"
repository = "https://github.com/theduke/quickjs-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>"]
keywords = ["quickjs", "javascript", "js", "engine", "interpreter"]

[package.metadata.docs.rs]
features = [ "chrono", "bigint", "log" ]

[features]
default = ["chrono"]
patched = ["libquickjs-sys/patched"]
bigint = ["num-bigint", "num-traits", "libquickjs-sys/patched"]

[dependencies]
libquickjs-sys = { version = ">= 0.9.0, < 0.10.0", path = "./libquickjs-sys" }
chrono = { version = "0.4.7", optional = true }
num-bigint = { version = "0.2.2", optional = true }
num-traits = { version = "0.2.0", optional = true }
log = { version = "0.4.8", optional = true }
once_cell = "1.2.0"

[workspace]
members = [
    "libquickjs-sys",
]

