[package]
edition = "2018"
name = "libquickjs-sys"
description = "QuickJS Javascript Engine FFI bindings"
version = "0.4.0"
readme = "README.md"
documentation = "https://docs.rs/quickjs-sys"
repository = "https://github.com/theduke/quickjs-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>"]
categories = ["external-ffi-bindings"]
keywords = ["quickjs"]

build = "build.rs"

[features]
bundled = ["copy_dir"]
patched = []
bignum = []
default = ["bundled"]

system = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.51.0", optional = true }
copy_dir = { version = "0.1.2", optional = true }

