[package]
edition = "2018"
name = "quickjs-sys"
version = "0.1.0-alpha.1"
readme = "README.md"
documentation = "https://docs.rs/quickjs-sys"
repository = "https://github.com/theduke/quickjs-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>"]

build = "build.rs"

[build-dependencies]
bindgen = { version = "0.50.0", optional = true }
copy_dir = { version = "0.1.2", optional = true }


[features]
bundled = ["copy_dir"]
default = ["bundled"]

system = ["bindgen"]
