[package]
name = "quick-js-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libquickjs-sys = { path = "../libquickjs-sys" }

serde = "1"
thiserror = "1"

[dev-dependencies]
quick-js = { path = "..", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
